--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <head> </head>
   <title>FirstData | urLease</title>
-  <base href="/">
+  <base href="./">
 
 
   <link rel="icon" type="image/x-icon" href="">
