--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
 </head>
 <body >
   <app-root>
+                Loading.....
 
   </app-root>
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
