--- a/src/index.html
+++ b/src/index.html
@@ -2,20 +2,25 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <head> </head>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
+
+
   <title>FirstData | urLease</title>
   <base href="./">
 
 
   <link rel="icon" type="image/x-icon" href="">
 </head>
-<body >
-  <app-root>
-                Loading.....
+<body>
 
-  </app-root>
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+
+<app-root>
+  Loading.....
+
+</app-root>
+
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
         crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
