--- a/src/index.html
+++ b/src/index.html
@@ -12,9 +12,7 @@
 
 
   <link rel="icon" type="image/x-icon" href="">
-  <!-- Owl Stylesheets -->
-  <link rel="stylesheet" href="/assets/js/owl.carousel.min.css">
-  <link rel="stylesheet" href="/assets/js/owl.theme.default.min.css">
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
 
@@ -33,8 +31,6 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
-
-    <script src="/assets/js/owl.carousel.js"></script>
 </body>
 </html>
 
